--- a/00reservedWords.html
+++ b/00reservedWords.html
@@ -12,7 +12,7 @@
 function kmhash(str){
 	var hash=0;
 	for(var i=0;i<str.length;i++){
-		hash=hash<<6 | hash>>26;
+		hash=hash<<6 ^ hash>>26;
 		hash^=str.charCodeAt(i);
 		hash&=0xffffffff;
 	}
@@ -119,7 +119,9 @@ words=[
 	'SIN',
 	'SINH',
 	'SOUND',
+	'SPRINTF',
 	'SQRT',
+	'STRNCMP',
 	'SYSTEM',
 	'TAN',
 	'TANH',
