Update reserved words

--- a/00reservedWords.html
+++ b/00reservedWords.html
@@ -27,12 +27,15 @@ words=[
 	'ASIN',
 	'ATAN',
 	'ATAN2',
+	'BGCOLOR',
+	'BOXFILL',
 	'BREAK',
 	'CALL',
 	'CDATA',
 	'CEIL',
 	'CHR',
 	'CIRCLE',
+	'CIRCLEFILL',
 	'CLEAR',
 	'CLS',
 	'COLOR',
@@ -74,6 +77,7 @@ words=[
 	'GETDIR',
 	'GOSUB',
 	'GOTO',
+	'GPALETTE',
 	'GPRINT',
 	'HEX',
 	'IDLE',
@@ -91,10 +95,11 @@ words=[
 	'LOOP',
 	'MODF',
 	'MUSIC',
-	'NEXT',
 	'NEW',
+	'NEXT',
 	'NOT',
 	'OPTION',
+	'PALETTE',
 	'PCG',
 	'PEEK',
 	'PEEK16',
@@ -128,6 +133,7 @@ words=[
 	'TIMER',
 	'TVRAM',
 	'UNTIL',
+	'USEGRAPHIC',
 	'USEPCG',
 	'USEVAR',
 	'VAL',
