Add several reserved words

--- a/00reservedWords.html
+++ b/00reservedWords.html
@@ -39,15 +39,18 @@ words=[
 	'CLEAR',
 	'CLS',
 	'COLOR',
+	'CONTINUE',
 	'COS',
 	'COSH',
 	'CREAD',
 	'CURSOR',
 	'DATA',
+	'DEBUG',
 	'DEC',
 	'DELETE',
 	'DIM',
 	'DO',
+	'DRAWCOUNT',
 	'ELSE',
 	'ELSEIF',
 	'END',
@@ -116,6 +119,7 @@ words=[
 	'PUTBMP',
 	'READ',
 	'REM',
+	'RESTORE',
 	'RETURN',
 	'RND',
 	'SCROLL',
@@ -126,11 +130,14 @@ words=[
 	'SOUND',
 	'SPRINTF',
 	'SQRT',
+	'STEP',
 	'STRNCMP',
 	'SYSTEM',
 	'TAN',
 	'TANH',
+	'THEN',
 	'TIMER',
+	'TO',
 	'TVRAM',
 	'UNTIL',
 	'USEGRAPHIC',
