FIELD statement, NEW() function

--- a/00reservedWords.html
+++ b/00reservedWords.html
@@ -39,15 +39,18 @@ words=[
 	'CLEAR',
 	'CLS',
 	'COLOR',
+	'CONTINUE',
 	'COS',
 	'COSH',
 	'CREAD',
 	'CURSOR',
 	'DATA',
+	'DEBUG',
 	'DEC',
 	'DELETE',
 	'DIM',
 	'DO',
+	'DRAWCOUNT',
 	'ELSE',
 	'ELSEIF',
 	'END',
@@ -117,6 +120,7 @@ words=[
 	'PUTBMP',
 	'READ',
 	'REM',
+	'RESTORE',
 	'RETURN',
 	'RND',
 	'SCROLL',
@@ -127,13 +131,18 @@ words=[
 	'SOUND',
 	'SPRINTF',
 	'SQRT',
+	'STATIC',
+	'STEP',
 	'STRNCMP',
 	'SYSTEM',
 	'TAN',
 	'TANH',
+	'THEN',
 	'TIMER',
+	'TO',
 	'TVRAM',
 	'UNTIL',
+	'USECLASS',
 	'USEGRAPHIC',
 	'USEPCG',
 	'USEVAR',
