--- a/00reservedWords.html
+++ b/00reservedWords.html
@@ -152,6 +152,33 @@ words=[
 	'WEND',
 	'WHILE',
 	'WIDTH',
+	// I/O statements follow
+	'OUT',
+	'OUT8H',
+	'OUT8L',
+	'OUT16',
+	'PWM',
+	'SERIAL',
+	'SERIALOUT',
+	'I2CWRITE',
+	'I2CWRITEDATA',
+	'I2CREADDATA',
+	'I2C',
+	'SPI',
+	'SPIWRITE',
+	'SPIWRITEDATA',
+	'SPIREADDATA',
+	'SPISWAPDATA',
+	// I/O functions follow
+	'IN',
+	'IN8H',
+	'IN8L',
+	'IN16',
+	'ANALOG',
+	'SERIALIN',
+	'I2CREAD',
+	'I2CERROR',
+	'SPIREAD',
 ];
 
 document.write("const char* const g_reserved_words["+words.length+"]={\n");
