WAITMS -> DELAYMS, WAITUS -> DELAYUS

--- a/00reservedWords.html
+++ b/00reservedWords.html
@@ -22,6 +22,7 @@ function kmhash(str){
 words=[
 	'ABS',
 	'ACOS',
+	'ANALOG',
 	'ARGS',
 	'ASC',
 	'ASIN',
@@ -40,6 +41,7 @@ words=[
 	'CLS',
 	'COLOR',
 	'CONTINUE',
+	'CORETIMER',
 	'COS',
 	'COSH',
 	'CREAD',
@@ -47,6 +49,8 @@ words=[
 	'DATA',
 	'DEBUG',
 	'DEC',
+	'DELAYMS',
+	'DELAYUS',
 	'DELETE',
 	'DIM',
 	'DO',
@@ -74,6 +78,7 @@ words=[
 	'FPRINT',
 	'FPUT',
 	'FPUTC',
+	'FREMOVE',
 	'FSEEK',
 	'GCLS',
 	'GCOLOR',
@@ -83,11 +88,22 @@ words=[
 	'GPALETTE',
 	'GPRINT',
 	'HEX',
+	'I2C',
+	'I2CERROR',
+	'I2CREAD',
+	'I2CREADDATA',
+	'I2CWRITE',
+	'I2CWRITEDATA',
 	'IDLE',
 	'IF',
+	'IN',
+	'IN16',
+	'IN8H',
+	'IN8L',
 	'INKEY',
 	'INPUT',
 	'INT',
+	'INTERRUPT',
 	'KEYS',
 	'LABEL',
 	'LEN',
@@ -96,18 +112,24 @@ words=[
 	'LOG',
 	'LOG10',
 	'LOOP',
+	'METHOD',
 	'MODF',
 	'MUSIC',
 	'NEW',
 	'NEXT',
 	'NOT',
 	'OPTION',
+	'OUT',
+	'OUT16',
+	'OUT8H',
+	'OUT8L',
 	'PALETTE',
 	'PCG',
 	'PEEK',
 	'PEEK16',
 	'PEEK32',
 	'PI',
+	'PLAYWAVE',
 	'POINT',
 	'POKE',
 	'POKE16',
@@ -118,21 +140,32 @@ words=[
 	'PSET',
 	'PUBLIC',
 	'PUTBMP',
+	'PWM',
 	'READ',
 	'REM',
 	'RESTORE',
 	'RETURN',
 	'RND',
 	'SCROLL',
+	'SERIAL',
+	'SERIALIN',
+	'SERIALOUT',
 	'SETDIR',
 	'SGN',
 	'SIN',
 	'SINH',
 	'SOUND',
+	'SPI',
+	'SPIREAD',
+	'SPIREADDATA',
+	'SPISWAPDATA',
+	'SPIWRITE',
+	'SPIWRITEDATA',
 	'SPRINTF',
 	'SQRT',
 	'STATIC',
 	'STEP',
+	'STOP',
 	'STRNCMP',
 	'SYSTEM',
 	'TAN',
@@ -145,40 +178,15 @@ words=[
 	'USECLASS',
 	'USEGRAPHIC',
 	'USEPCG',
+	'USETIMER',
 	'USEVAR',
 	'VAL',
 	'VAR',
 	'WAIT',
+	'WAVE',
 	'WEND',
 	'WHILE',
 	'WIDTH',
-	// I/O statements follow
-	'OUT',
-	'OUT8H',
-	'OUT8L',
-	'OUT16',
-	'PWM',
-	'SERIAL',
-	'SERIALOUT',
-	'I2CWRITE',
-	'I2CWRITEDATA',
-	'I2CREADDATA',
-	'I2C',
-	'SPI',
-	'SPIWRITE',
-	'SPIWRITEDATA',
-	'SPIREADDATA',
-	'SPISWAPDATA',
-	// I/O functions follow
-	'IN',
-	'IN8H',
-	'IN8L',
-	'IN16',
-	'ANALOG',
-	'SERIALIN',
-	'I2CREAD',
-	'I2CERROR',
-	'SPIREAD',
 ];
 
 document.write("const char* const g_reserved_words["+words.length+"]={\n");
