SYSTEM(250,x) and SYSTEM(251,x) for calloc/malloc

--- a/scripts/reservedWords.html
+++ b/scripts/reservedWords.html
@@ -22,6 +22,7 @@ function kmhash(str){
 words=[
 	'ABS',
 	'ACOS',
+	'ALIGN4',
 	'ANALOG',
 	'ARGS',
 	'ASC',
@@ -47,6 +48,7 @@ words=[
 	'CREAD',
 	'CURSOR',
 	'DATA',
+	'DATAADDRESS',
 	'DEBUG',
 	'DEC',
 	'DELAYMS',
@@ -80,6 +82,7 @@ words=[
 	'FPUTC',
 	'FREMOVE',
 	'FSEEK',
+	'FUNCADDRESS',
 	'GCLS',
 	'GCOLOR',
 	'GETDIR',
