--- a/scripts/reservedWords.html
+++ b/scripts/reservedWords.html
@@ -38,6 +38,7 @@ words=[
 	'CHR',
 	'CIRCLE',
 	'CIRCLEFILL',
+	'CLASSCODE',
 	'CLEAR',
 	'CLS',
 	'COLOR',
@@ -55,6 +56,7 @@ words=[
 	'DELAYUS',
 	'DELETE',
 	'DIM',
+	'DNS',
 	'DO',
 	'DRAWCOUNT',
 	'ELSE',
@@ -86,6 +88,7 @@ words=[
 	'GCLS',
 	'GCOLOR',
 	'GETDIR',
+	'GETTIME',
 	'GOSUB',
 	'GOTO',
 	'GPALETTE',
@@ -99,6 +102,7 @@ words=[
 	'I2CWRITEDATA',
 	'IDLE',
 	'IF',
+	'IFCONFIG',
 	'IN',
 	'IN16',
 	'IN8H',
@@ -121,6 +125,7 @@ words=[
 	'NEW',
 	'NEXT',
 	'NOT',
+	'NTP',
 	'OPTION',
 	'OUT',
 	'OUT16',
@@ -145,6 +150,7 @@ words=[
 	'PUTBMP',
 	'PWM',
 	'READ',
+	'READKEY',
 	'REM',
 	'RESTORE',
 	'RETURN',
@@ -154,6 +160,7 @@ words=[
 	'SERIALIN',
 	'SERIALOUT',
 	'SETDIR',
+	'SETTIME',
 	'SGN',
 	'SIN',
 	'SINH',
@@ -169,12 +176,21 @@ words=[
 	'STATIC',
 	'STEP',
 	'STOP',
+	'STRFTIME',
 	'STRNCMP',
 	'SYSTEM',
 	'TAN',
 	'TANH',
+	'TCPACCEPT',
+	'TCPCLIENT',
+	'TCPCLOSE',
+	'TCPRECEIVE',
+	'TCPSEND',
+	'TCPSERVER',
+	'TCPSTATUS',
 	'THEN',
 	'TIMER',
+	'TLSCLIENT',
 	'TO',
 	'TVRAM',
 	'UNTIL',
@@ -190,6 +206,7 @@ words=[
 	'WEND',
 	'WHILE',
 	'WIDTH',
+	'WIFIERR',
 ];
 
 document.write("const char* const g_reserved_words["+words.length+"]={\n");
