FFIND$(), FINFO(), and FINFO$()

--- a/scripts/reservedWords.html
+++ b/scripts/reservedWords.html
@@ -68,10 +68,12 @@ words=[
 	'FABS',
 	'FCLOSE',
 	'FEOF',
+	'FFIND',
 	'FGET',
 	'FGETC',
 	'FIELD',
 	'FILE',
+	'FINFO',
 	'FINPUT',
 	'FLEN',
 	'FLOAT',
